# GongXun

./: CMakeLists.txt  config.txt  detect_circle.py  problem.md  readme.md  scheme.md  typescript  任务进度推进表.xlsx  接线.md
@JueSai/: VisionPlate.py  VisionUtils.py  VisionZanCun.py  main copy.py  main.py  test.py
App/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  app.sln  app.vcxproj  app.vcxproj.filters  cmake_install.cmake  main.cpp
App/.cache/clangd/index/: main.cpp.46B4F9CC4749C009.idx
App/utils/: CMakeLists.txt  utils.cpp  utils.hpp
Document/: Ubuntu取消开机密码.md  修改分辨率.md
OpenMv/: Fun_om.py
STM32/舵机-改 - 白 - 决赛/: 27号绿色从载盘上抓取+抬起+放置（暂存区）.rob  28号红色从载盘上抓取+抬起+放置（暂存区）.rob  7号绿色载物待抓+抓取+抬起.rob
STM32/舵机-改 - 黑 - 决赛/: 14号重新抓起.rob  1号圆盘new.rob  26号蓝色抓取+抬起+放置（暂存区）.rob  (+3 more)
bd/: bdG.py  biaoding.md  mtx.md  mtx.txt  tvG.py
document/: Ubuntu20.04--开机自动运行脚本(命令)--方法_实例_ubuntu 开机自动执行终端命令 (2023_9_12 21_45_42).html  ubuntu22.04_20.04取消_关闭开机输入密码（实测可用）_取消ubuntu密码_widewith的博客-CSDN博客 (2023_9_12 21_46_08).html
legacy/: screen.sh
notes/: 图像处理理论.md  接线.md
reference/: Dashboard.py  bjdj.py  circle_find.py  main program.py  vision.py
reference-code/: Functions.py  jet.py  vision.py  ym.py  作者的一些感想.docx
script/: .detect_circle.py.swp  Function.py  Functions.py  biaoding.md  biaoding.py  bug9.27.txt  capture.sh  circle_test.py  detect_circle.py  detect_item.py  detect_qrcode.py  frame_test.py  getXYdelta.py  jiaozhunsehuan.py  kmeans-test.py  no_lag_frame.py  serial-test.py  takeshot.py  takevideo.py  test.py  test2.py  test3.py  test4.py  test6.py  threshold.xml  threshold_abstract.py  tvG.py  video.txt  videotake.py
src/: Communication.py  Display.py  Function.py  Vision copy.py  Vision.py  Vision0.py  Vision1 copy.py  Vision1.py  Vision1copy.py  Vision2 copy.py  Vision2.py  Vision2copy.py  Vision2copycopy.py  Vision2js.py  Vision3 copy.py  Vision3.py  Vision3copy.py  Vision4.py  VisionCopy.py  VisionUtils.py  XmlProcess.py  clear_imgs.sh  detect_circle.py  detect_qrcode.py  finalVision.py  look.py  main.cpp  main.py  maincopy.py  monitor.sh  parameter copy.xml  parameter.xml  parameter.yaml  parameterCopy.xml  start.desktop  start.sh  take.py  takephoto.py  test.py  threshold.py  (+1 more)
test/: CMakeCache.txt  CMakeLists.txt  Function.cpp  Function.hpp  Makefile  cmake_install.cmake  main.cpp  test_opencv  test_opencv.cpp
test-item/: mask_test.py  test.py
test-ring/: Communication.py  jiaozhunsehuan.py  test.py
test_screen/: screen_main.py  test_screen.py
utils/: Functions.py
(+194 files in other folders)
